--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <address class="header__address">
     <a href="tel:+99995555555">+9 999 555 5555</a>
     <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-    <p>наб.Принсенграхт 263-265, Амстердам</p>
+    <p>наб. Принсенграхт 263- 265, Амстердам</p>
     </address>
   </header>
   <main>
@@ -77,7 +77,7 @@
         </a>
       </li>
       </ul>
-      <a class="lots__look-more-link" href="#">Посмотреть больше</a>
+      <a class="lots__look-more-link" href="#">посмотреть больше</a>
     </section>
     <section class="about" id="about">
      <div class="about__column">
@@ -88,8 +88,9 @@
       <div class="about__column">
         <h2 class="about__title">Об аукционе</h2>
         <div class="about__text">
-          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребенок? Кому нужны все эти странные вещи, созданные любителями?</p>
-          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, как бы то ни было, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
         </div>
       </div>
     </section>
